edited gap to fix alignment

--- a/dashboard.css
+++ b/dashboard.css
@@ -28,4 +28,7 @@
 .section1 div {
     display: flex;
     align-items: center;
+    padding-left: 5px;
+    gap: 5px;
+    
 }
